added files to be upload, view enhanced

--- a/views/getFolderItems.handlebars
+++ b/views/getFolderItems.handlebars
@@ -6,4 +6,16 @@
 		<h3>File ID: "{{id}}"</h3>
 	</div>
 	{{/each}}
+	<div class="container">
+	<h2>Upload a File into a Folder in BOX: </h2>
+	<form action="#">
+		<h3>File name: </h3>
+		<input id="fileName" type="text" value="" name="name" />
+		<h3>File:</h3>
+		<p>C:\Users\IBM_ADMIN\Proyectos\start2\public\files</p>
+		<input id="filePath" type="text" value="" name="path" />
+		<br><br>
+		<input type="submit" value="Submit" name=""/>
+	</form>
+</div>
 </div>
