--- a/views/getFileInfo.handlebars
+++ b/views/getFileInfo.handlebars
@@ -4,7 +4,7 @@
 	<h3>File description: "{{file.description}}"</h3>
 	<br>
 	<h4>File id: "{{file.id}}"</h4>
-	<h4>File size: "{{file.size}}"</h4>
+	<h4>File size: "{{file.size}} Bytes"</h4>
 	<h4>Created by: "{{file.created_by.name}}"</h4>
 	<br>
 	<a href="/updateFileInfo/{{file.id}}">Update</a>
